--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,9 @@ h1 {
 
 /* New CSS for smaller screens */
 @media (max-width: 768px) {
+  h1 {
+    font-size: 1rem;
+  }
   .instruments {
     display: flex;
     flex-wrap: wrap;
