--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,11 @@ h1 {
   flex-direction: column;
   align-items: center;
   margin-top: 10px;
+  transition: display 0.2s ease-in-out;
+}
+
+.instruments.visible {
+  display: block;
 }
 
 .music-list li:hover .instruments {
@@ -70,7 +75,6 @@ h1 {
     font-size: 1rem;
   }
   .instruments {
-    display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
